Update README.md
Updated readme to make it easier to understand in a step-by-step description for 3rd party developers/testers.